@@ -2,9 +2,12 @@ plugins {
     id 'org.openjfx.javafxplugin' version '0.0.8'
     id 'java'
     id 'application'
+    id "edu.sc.seis.launch4j" version "2.4.6"
+    id 'org.beryx.jlink' version "2.17.2"
+    id 'com.github.johnrengelman.shadow' version '5.2.0'
 }
 
-mainClassName = 'OCRfiles/yamanov.gui.Launcher'
+mainClassName = 'yamanov.gui.Launcher'
 
 javafx {
     version = '11.0.1'
@@ -34,7 +37,6 @@ dependencies {
     compile('net.bytebuddy:byte-buddy:1.10.8')
     compile('javax.xml.bind:jaxb-api:2.3.1')
     compile('com.fasterxml:classmate:1.5.1')
-//    compile('com.sun.xml.bind:jaxb-core:2.3.0.1')
 }
 
 jar {
@@ -43,4 +45,20 @@ jar {
 
 run {
     jvmArgs = ['--add-exports=javafx.base/com.sun.javafx.event=org.controlsfx.controls']
+}
+
+launch4j {
+    headerType="gui"
+    outfile = 'OCRFiles.exe'
+    mainClassName = 'yamanov.gui.Launcher'
+    jreMinVersion = '10'
+}
+
+jlink {
+
+    options = ['--strip-debug', '--compress', '2', '--no-header-files', '--no-man-pages']
+    launcher{
+        name = 'RefList'
+        jvmArgs = ['--add-exports=javafx.base/com.sun.javafx.event=org.controlsfx.controls']
+    }
 }
